--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,125 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+body{
+  background-color: maroon;
+}
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.selectedBar{
+  background-color: lightgray;
+  width: 50vw;
+  border: 1px solid black;
+  box-shadow: 3px 3px gray;
+
+}
+.selectedBar p{
+  font-weight: 600;
+  font-size: 2rem;
+  padding: 0 2%;
+}
+
+.shapeList{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50vw;
+  flex-direction: row;
+  margin-top: 5vh;
+  background-color: gray;
+  box-shadow: inset 0px 0px 5px 5px black;
+  padding: 2%;
+}
+.circle {
+  width: 120px;
+  height: 120px;
+  background: #7fee1d;
+  -moz-border-radius: 60px;
+  -webkit-border-radius: 60px;
+  border-radius: 60px;
+}
+
+.square {
+  width: 120px;
+  height: 120px;
+  background: #f447ff;
+}
+
+.oval {
+  width: 200px;
+  height: 100px;
+  background: #e9337c;
+  -webkit-border-radius: 100px / 50px;
+  -moz-border-radius: 100px / 50px;
+  border-radius: 100px / 50px;
+}
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-bottom: 120px solid #fcf921;
+  border-left: 70px solid transparent;
+  border-right: 70px solid transparent;
+}
+
+.star {
+  width: 0;
+  height: 0;
+  margin: 50px 0;
+  color: #fc2e5a;
+  position: relative;
+  display: block;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid #fc2e5a;
+  border-left: 100px solid transparent;
+  -moz-transform: rotate(35deg);
+  -webkit-transform: rotate(35deg);
+  -ms-transform: rotate(35deg);
+  -o-transform: rotate(35deg);
+}
+
+.star:before {
+  height: 0;
+  width: 0;
+  position: absolute;
+  display: block;
+  top: -45px;
+  left: -65px;
+  border-bottom: 80px solid #fc2e5a;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  content: '';
+  -webkit-transform: rotate(-35deg);
+  -moz-transform: rotate(-35deg);
+  -ms-transform: rotate(-35deg);
+  -o-transform: rotate(-35deg);
+}
+
+.star:after {
+  content: '';
+  width: 0;
+  height: 0;
+  position: absolute;
+  display: block;
+  top: 3px;
+  left: -105px;
+  color: #fc2e5a;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid #fc2e5a;
+  border-left: 100px solid transparent;
+  -webkit-transform: rotate(-70deg);
+  -moz-transform: rotate(-70deg);
+  -ms-transform: rotate(-70deg);
+  -o-transform: rotate(-70deg);
+}
+
+
+.shapes:hover{
+  cursor: pointer;
+  opacity: .5;
 }
